# regex-benchmark

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
src/: calc_regex_speed.rs  cli.rs  duration_utils.rs  enums.rs  graph.rs  lib.rs  main.rs  rand_str_builder.rs
