[package]
name = "regex-benchmark"
version = "0.2.0"
edition = "2021"
authors = ["Salaah Amin"]
description = "A Rust binary to benchmark regex expressions"
license = "MIT"
repository = "https://github.com/Salaah01/regex-benchmark/"
homepage = "https://github.com/Salaah01/regex-benchmark/"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
keywords = ["regex", "benchmark", "cli", "command-line", "utility", "tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
open = "5.1.2"
plotters = "0.3.5"
rand = "0.8.5"
regex-lite = "0.1.5"
